Sun Sep 26 18:16:46 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* kernel/kcurskch.s ( _kernel_current_stack_chunk): Return NULL for
	non chunked stack builds.
	* pthread/create.c (__pthread_create): Hacks for non chunked stack
	builds.
	* pthread/newnode.c (__pthread_new_stack): Likewise.
	* pthread/context.c (__pthread_cleanup_idle): Likewise.
	* configure.ac (UNIXLIB_CHUNKED_STACK): New conditional which gets
	set for non arm-unknown-riscos targets.
	(BUILDING_SCL): Rename to UNIXLIB_BUILDING_SCL.
	* include/unixlib/buildoptions.h: Allow _UNIXLIB_* buidoptions to
	be set from the top Makefile.
	(__UNIXLIB_CHUNKED_STACK): Added.
	* Makefile.am: Add __UNIXLIB_CHUNKED_STACK to CFLAGS and CCASFLAGS.
	Follow BUILDING_SCL to UNIXLIB_BUILDING_SCL rename.
	* README-DEV: Add 'Development' section.
	* incl-local/internal/asm_dec.s: Don't define CHUNK_* for non
	chunked stack builds.
	* incl-local/internal/unix.h: Disable sys/stackalloc.c prototypes
	which are not available in non chunked stack builds.
	* sys/stackalloc.c: Have only the __stackalloc_incr_wimpslot
	function for non chunked stack builds.
	* sys/_syslib.s: First attempt at non chunked stack setup.

Sat Sep 11 18:37:46 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* stdio/fwrite.c (fwrite): Do not call __flsbuf when fd is -1 as this
	is a magic value.

Thu Sep  9 00:21:32 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* unix/dev.c (__fsopen): Give error EISDIR when directory is opened
	for O_RDWR.  Reported by John-Mark Bell.
	* Makefile.am: Removed unexisting sys/netdb.h for install.  Avoid
	creating emtpy resolv include subdirectory.

Thu Aug 26 03:36:17 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* unix/getenv (__intenv): Move to...
	* unix/pipe.c: ...here.  Changed return type to unsigned int.
	(pipe): Follow return tyep change.
	* incl-local/internal/unix.h (__intenv): Remove prototype.
	* vscript (__intenv): Remove.
	* unix/getenv.c: Moved remaining part to...
	* unix/ul_getenv.c: ...here.