@@ -1,12 +1,12 @@
 /*
  * Written by Alex Waugh
- * Copyright (c) 2002-2006 UnixLib Developers
+ * Copyright (c) 2002-2010 UnixLib Developers
  */
 
 #ifndef __SCHED_H
 #define __SCHED_H
 
-#ifndef __UNIXLIB_FEATURES
+#ifndef __UNIXLIB_FEATURES_H
 #include <features.h>
 #endif
 
